# precursor-mathdrill

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
src/: app.rs  main.rs  problems.rs  rng.rs  storage.rs  ui.rs
